@@ -16,27 +16,25 @@
  */
 package org.apache.catalina.ant;
 
+import java.io.BufferedOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.URLConnection;
 
-import org.apache.catalina.util.IOTools;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 
 /**
- * Abstract base class for Ant tasks that interact with the <em>Manager</em> web application for dynamically deploying
- * and undeploying applications. These tasks require Ant 1.4 or later.
+ * Abstract base class for Ant tasks that interact with the <em>Manager</em> web
+ * application for dynamically deploying and undeploying applications. These
+ * tasks require Ant 1.4 or later.
  *
  * @author Craig R. McClanahan
- *
  * @since 4.1
  */
 public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
@@ -107,14 +105,16 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * If set to true - ignore the constraint of the first line of the response message that must be "OK -".
+     * If set to true - ignore the constraint of the first line of the response
+     * message that must be "OK -".
      * <p>
-     * When this attribute is set to {@code false} (the default), the first line of server response is expected to start
-     * with "OK -". If it does not then the task is considered as failed and the first line is treated as an error
-     * message.
+     * When this attribute is set to {@code false} (the default), the first line
+     * of server response is expected to start with "OK -". If it does not then
+     * the task is considered as failed and the first line is treated as an
+     * error message.
      * <p>
-     * When this attribute is set to {@code true}, the first line of the response is treated like any other, regardless
-     * of its text.
+     * When this attribute is set to {@code true}, the first line of the
+     * response is treated like any other, regardless of its text.
      */
     protected boolean ignoreResponseConstraint = false;
 
@@ -130,8 +130,9 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
     // --------------------------------------------------------- Public Methods
 
     /**
-     * Execute the specified command. This logic only performs the common attribute validation required by all
-     * subclasses; it does not perform any functional logic directly.
+     * Execute the specified command. This logic only performs the common
+     * attribute validation required by all subclasses; it does not perform any
+     * functional logic directly.
      *
      * @exception BuildException if a validation error occurs
      */
@@ -156,27 +157,26 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
 
 
     /**
-     * Execute the specified command, based on the configured properties. The input stream will be closed upon
-     * completion of this task, whether it was executed successfully or not.
+     * Execute the specified command, based on the configured properties. The
+     * input stream will be closed upon completion of this task, whether it was
+     * executed successfully or not.
      *
-     * @param command       Command to be executed
-     * @param istream       InputStream to include in an HTTP PUT, if any
-     * @param contentType   Content type to specify for the input, if any
+     * @param command Command to be executed
+     * @param istream InputStream to include in an HTTP PUT, if any
+     * @param contentType Content type to specify for the input, if any
      * @param contentLength Content length to specify for the input, if any
      *
      * @exception BuildException if an error occurs
      */
     public void execute(String command, InputStream istream, String contentType, long contentLength)
-            throws BuildException {
+                    throws BuildException {
 
+        URLConnection conn = null;
         InputStreamReader reader = null;
         try {
-            // Set up authorization with our credentials
-            Authenticator.setDefault(new TaskAuthenticator(username, password));
 
             // Create a connection for this command
-            URI uri = new URI(url + command);
-            URLConnection conn = uri.parseServerAuthority().toURL().openConnection();
+            conn = (new URL(url + command)).openConnection();
             HttpURLConnection hconn = (HttpURLConnection) conn;
 
             // Set up standard connection characteristics
@@ -184,8 +184,6 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
             hconn.setDoInput(true);
             hconn.setUseCaches(false);
             if (istream != null) {
-                preAuthenticate();
-
                 hconn.setDoOutput(true);
                 hconn.setRequestMethod("PUT");
                 if (contentType != null) {
@@ -202,13 +200,30 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
             }
             hconn.setRequestProperty("User-Agent", "Catalina-Ant-Task/1.0");
 
+            // Set up authorization with our credentials
+            Authenticator.setDefault(new TaskAuthenticator(username, password));
+
             // Establish the connection with the server
             hconn.connect();
 
             // Send the request data (if any)
             if (istream != null) {
-                try (istream; OutputStream ostream = hconn.getOutputStream()) {
-                    IOTools.flow(istream, ostream);
+                try (BufferedOutputStream ostream = new BufferedOutputStream(
+                                hconn.getOutputStream(), 1024)) {
+                    byte buffer[] = new byte[1024];
+                    while (true) {
+                        int n = istream.read(buffer);
+                        if (n < 0) {
+                            break;
+                        }
+                        ostream.write(buffer, 0, n);
+                    }
+                    ostream.flush();
+                } finally {
+                    try {
+                        istream.close();
+                    } catch (Exception e) {
+                    }
                 }
             }
 
@@ -222,11 +237,11 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 int ch = reader.read();
                 if (ch < 0) {
                     break;
-                } else if (ch == '\r' || ch == '\n') {
+                } else if ((ch == '\r') || (ch == '\n')) {
                     // in Win \r\n would cause handleOutput() to be called
                     // twice, the second time with an empty string,
                     // producing blank lines
-                    if (!buff.isEmpty()) {
+                    if (buff.length() > 0) {
                         String line = buff.toString();
                         buff.setLength(0);
                         if (!ignoreResponseConstraint && first) {
@@ -242,7 +257,7 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                     buff.append((char) ch);
                 }
             }
-            if (!buff.isEmpty()) {
+            if (buff.length() > 0) {
                 handleOutput(buff.toString(), msgPriority);
             }
             if (error != null && isFailOnError()) {
@@ -264,6 +279,7 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 } catch (IOException ioe) {
                     // Ignore
                 }
+                reader = null;
             }
             if (istream != null) {
                 try {
@@ -272,40 +288,6 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                     // Ignore
                 }
             }
-        }
-    }
-
-
-    /*
-     * This is a hack. We need to use streaming to avoid OOME on large uploads. We'd like to use
-     * Authenticator.setDefault() for authentication as the JRE then provides the DIGEST client implementation. However,
-     * the above two are not compatible. When the request is made, the resulting 401 triggers an exception because, when
-     * using streams, the InputStream is no longer available to send with the repeated request that now includes the
-     * appropriate Authorization header. The hack is to make a simple OPTIONS request- i.e. without a request body. This
-     * triggers authentication and the requirement to authenticate for this host is cached and used to provide an
-     * appropriate Authorization when the next request is made (that includes a request body).
-     */
-    private void preAuthenticate() throws IOException, URISyntaxException {
-
-        // Create a connection for this command
-        URI uri = new URI(url);
-        URLConnection conn = uri.parseServerAuthority().toURL().openConnection();
-        HttpURLConnection hconn = (HttpURLConnection) conn;
-
-        // Set up standard connection characteristics
-        hconn.setAllowUserInteraction(false);
-        hconn.setDoInput(true);
-        hconn.setUseCaches(false);
-        hconn.setDoOutput(false);
-        hconn.setRequestMethod("OPTIONS");
-        hconn.setRequestProperty("User-Agent", "Catalina-Ant-Task/1.0");
-
-        // Establish the connection with the server
-        hconn.connect();
-
-        // Swallow response message
-        try (InputStream is = hconn.getInputStream()) {
-            IOTools.flow(is, null);
         }
     }
 
