@@ -17,64 +17,59 @@
 package org.apache.catalina.filters;
 
 import java.io.IOException;
-import java.io.ObjectInputStream;
-import java.io.Serial;
-import java.net.InetAddress;
-import java.net.UnknownHostException;
-import java.util.ArrayDeque;
+import java.text.DateFormat;
+import java.text.SimpleDateFormat;
 import java.util.Collections;
-import java.util.Deque;
+import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.regex.Pattern;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.GenericFilter;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.ServletRequest;
-import jakarta.servlet.ServletResponse;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletRequestWrapper;
-import jakarta.servlet.http.HttpServletResponse;
+import javax.servlet.FilterChain;
+import javax.servlet.GenericFilter;
+import javax.servlet.ServletException;
+import javax.servlet.ServletRequest;
+import javax.servlet.ServletResponse;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.PushBuilder;
 
 import org.apache.catalina.AccessLog;
 import org.apache.catalina.Globals;
+import org.apache.catalina.core.ApplicationPushBuilder;
 import org.apache.catalina.util.RequestUtil;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
-import org.apache.tomcat.util.buf.StringUtils;
-import org.apache.tomcat.util.http.FastHttpDateFormat;
-import org.apache.tomcat.util.http.parser.Host;
-import org.apache.tomcat.util.res.StringManager;
 
 /**
  * <p>
  * Servlet filter to integrate "X-Forwarded-For" and "X-Forwarded-Proto" HTTP headers.
  * </p>
  * <p>
- * Most of the design of this Servlet Filter is a port of
- * <a href="https://httpd.apache.org/docs/trunk/mod/mod_remoteip.html">mod_remoteip</a>, this servlet filter replaces
- * the apparent client remote IP address and hostname for the request with the IP address list presented by a proxy or a
- * load balancer via a request headers (e.g. "X-Forwarded-For").
+ * Most of the design of this Servlet Filter is a port of <a
+ * href="http://httpd.apache.org/docs/trunk/mod/mod_remoteip.html">mod_remoteip</a>, this servlet filter replaces the apparent client remote
+ * IP address and hostname for the request with the IP address list presented by a proxy or a load balancer via a request headers (e.g.
+ * "X-Forwarded-For").
  * </p>
  * <p>
- * Another feature of this servlet filter is to replace the apparent scheme (http/https) and server port with the scheme
- * presented by a proxy or a load balancer via a request header (e.g. "X-Forwarded-Proto").
+ * Another feature of this servlet filter is to replace the apparent scheme (http/https) and server port with the scheme presented by a
+ * proxy or a load balancer via a request header (e.g. "X-Forwarded-Proto").
  * </p>
  * <p>
  * This servlet filter proceeds as follows:
  * </p>
  * <p>
- * If the incoming <code>request.getRemoteAddr()</code> matches the servlet filter's list of internal or trusted
- * proxies:
+ * If the incoming <code>request.getRemoteAddr()</code> matches the servlet filter's list of internal proxies :
  * </p>
  * <ul>
- * <li>Loop on the comma-delimited list of IPs and hostnames passed by the preceding load balancer or proxy in the given
- * request's Http header named <code>$remoteIpHeader</code> (default value <code>x-forwarded-for</code>). Values are
- * processed in right-to-left order.</li>
+ * <li>Loop on the comma delimited list of IPs and hostnames passed by the preceding load balancer or proxy in the given request's Http
+ * header named <code>$remoteIpHeader</code> (default value <code>x-forwarded-for</code>). Values are processed in right-to-left order.</li>
  * <li>For each ip/host of the list:
  * <ul>
  * <li>if it matches the internal proxies list, the ip/host is swallowed</li>
@@ -82,13 +77,10 @@ import org.apache.tomcat.util.res.StringManager;
  * <li>otherwise, the ip/host is declared to be the remote ip and looping is stopped.</li>
  * </ul>
  * </li>
- * <li>If the request http header named <code>$protocolHeader</code> (default value <code>X-Forwarded-Proto</code>)
- * consists only of forwards that match <code>protocolHeaderHttpsValue</code> configuration parameter (default
- * <code>https</code>) then <code>request.isSecure = true</code>, <code>request.scheme = https</code> and
- * <code>request.serverPort = 443</code>. Note that 443 can be overwritten with the <code>$httpsServerPort</code>
- * configuration parameter.</li>
- * <li>Mark the request with the attribute {@link Globals#REQUEST_FORWARDED_ATTRIBUTE} and value {@code Boolean.TRUE} to
- * indicate that this request has been forwarded by one or more proxies.</li>
+ * <li>If the request http header named <code>$protocolHeader</code> (e.g. <code>x-forwarded-for</code>) equals to the value of
+ * <code>protocolHeaderHttpsValue</code> configuration parameter (default <code>https</code>) then <code>request.isSecure = true</code>,
+ * <code>request.scheme = https</code> and <code>request.serverPort = 443</code>. Note that 443 can be overwritten with the
+ * <code>$httpsServerPort</code> configuration parameter.</li>
  * </ul>
  * <table border="1">
  * <caption>Configuration parameters</caption>
@@ -101,88 +93,81 @@ import org.apache.tomcat.util.res.StringManager;
  * </tr>
  * <tr>
  * <td>remoteIpHeader</td>
- * <td>Name of the Http Header read by this servlet filter that holds the list of traversed IP addresses starting from
- * the requesting client</td>
+ * <td>Name of the Http Header read by this servlet filter that holds the list of traversed IP addresses starting from the requesting client
+ * </td>
  * <td>RemoteIPHeader</td>
  * <td>Compliant http header name</td>
  * <td>x-forwarded-for</td>
  * </tr>
  * <tr>
  * <td>internalProxies</td>
- * <td>Regular expression that matches the IP addresses of internal proxies. If they appear in the
- * <code>remoteIpHeader</code> value, they will be trusted and will not appear in the <code>proxiesHeader</code>
- * value</td>
+ * <td>Regular expression that matches the IP addresses of internal proxies.
+ * If they appear in the <code>remoteIpHeader</code> value, they will be
+ * trusted and will not appear
+ * in the <code>proxiesHeader</code> value</td>
  * <td>RemoteIPInternalProxy</td>
- * <td>Regular expression (in the syntax supported by {@link java.util.regex.Pattern java.util.regex})</td>
+ * <td>Regular expression (in the syntax supported by
+ * {@link java.util.regex.Pattern java.util.regex})</td>
  * <td>10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|
- * 169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|
- * 100\.6[4-9]{1}\.\d{1,3}\.\d{1,3}|100\.[7-9]{1}\d{1}\.\d{1,3}\.\d{1,3}|
- * 100\.1[0-1]{1}\d{1}\.\d{1,3}\.\d{1,3}|100\.12[0-7]{1}\.\d{1,3}\.\d{1,3}|
- * 172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}| 172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}|
- * 0:0:0:0:0:0:0:1|::1 <br>
- * By default, 10/8, 192.168/16, 169.254/16, 127/8, 100.64/10, 172.16/12, and 0:0:0:0:0:0:0:1 are allowed.</td>
+ *     169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|
+ *     172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|
+ *     172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
+ *     <br>
+ * By default, 10/8, 192.168/16, 169.254/16, 127/8 and 172.16/12 are allowed.</td>
  * </tr>
  * <tr>
  * <td>proxiesHeader</td>
- * <td>Name of the http header created by this servlet filter to hold the list of proxies that have been processed in
- * the incoming <code>remoteIpHeader</code></td>
+ * <td>Name of the http header created by this servlet filter to hold the list of proxies that have been processed in the incoming
+ * <code>remoteIpHeader</code></td>
  * <td>RemoteIPProxiesHeader</td>
  * <td>Compliant http header name</td>
  * <td>x-forwarded-by</td>
  * </tr>
  * <tr>
  * <td>trustedProxies</td>
- * <td>Regular expression that matches the IP addresses of trusted proxies. If they appear in the
- * <code>remoteIpHeader</code> value, they will be trusted and will appear in the <code>proxiesHeader</code> value</td>
+ * <td>Regular expression that matches the IP addresses of trusted proxies.
+ * If they appear in the <code>remoteIpHeader</code> value, they will be
+ * trusted and will appear in the <code>proxiesHeader</code> value</td>
  * <td>RemoteIPTrustedProxy</td>
- * <td>Regular expression (in the syntax supported by {@link java.util.regex.Pattern java.util.regex})</td>
+ * <td>Regular expression (in the syntax supported by
+ * {@link java.util.regex.Pattern java.util.regex})</td>
  * <td>&nbsp;</td>
  * </tr>
  * <tr>
  * <td>protocolHeader</td>
  * <td>Name of the http header read by this servlet filter that holds the flag that this request</td>
  * <td>N/A</td>
- * <td>Compliant http header name like <code>X-Forwarded-Proto</code>, <code>X-Forwarded-Ssl</code> or
- * <code>Front-End-Https</code></td>
- * <td><code>X-Forwarded-Proto</code></td>
+ * <td>Compliant http header name like <code>X-Forwarded-Proto</code>, <code>X-Forwarded-Ssl</code> or <code>Front-End-Https</code></td>
+ * <td><code>null</code></td>
  * </tr>
  * <tr>
  * <td>protocolHeaderHttpsValue</td>
- * <td>Value of the <code>protocolHeader</code> to indicate that it is a Https request</td>
+ * <td>Value of the <code>protocolHeader</code> to indicate that it is an Https request</td>
  * <td>N/A</td>
  * <td>String like <code>https</code> or <code>ON</code></td>
  * <td><code>https</code></td>
  * </tr>
  * <tr>
  * <td>httpServerPort</td>
- * <td>Value returned by {@link ServletRequest#getServerPort()} when the <code>protocolHeader</code> indicates
- * <code>http</code> protocol</td>
+ * <td>Value returned by {@link ServletRequest#getServerPort()} when the <code>protocolHeader</code> indicates <code>http</code> protocol</td>
  * <td>N/A</td>
  * <td>integer</td>
  * <td>80</td>
  * </tr>
  * <tr>
  * <td>httpsServerPort</td>
- * <td>Value returned by {@link ServletRequest#getServerPort()} when the <code>protocolHeader</code> indicates
- * <code>https</code> protocol</td>
+ * <td>Value returned by {@link ServletRequest#getServerPort()} when the <code>protocolHeader</code> indicates <code>https</code> protocol</td>
  * <td>N/A</td>
  * <td>integer</td>
  * <td>443</td>
  * </tr>
- * <tr>
- * <td>enableLookups</td>
- * <td>Should a DNS lookup be performed to provide a host name when calling {@link ServletRequest#getRemoteHost()}</td>
- * <td>N/A</td>
- * <td>boolean</td>
- * <td>false</td>
- * </tr>
  * </table>
  * <p>
- * <strong>Regular expression vs. IP address blocks:</strong> <code>mod_remoteip</code> allows to use address blocks
- * (e.g. <code>192.168/16</code>) to configure <code>RemoteIPInternalProxy</code> and <code>RemoteIPTrustedProxy</code>
- * ; as the JVM doesn't have a library similar to <a href=
- * "https://apr.apache.org/docs/apr/1.3/group__apr__network__io.html#gb74d21b8898b7c40bf7fd07ad3eb993d">apr_ipsubnet_test</a>,
- * we rely on regular expressions.
+ * <strong>Regular expression vs. IP address blocks:</strong> <code>mod_remoteip</code> allows to use address blocks (e.g.
+ * <code>192.168/16</code>) to configure <code>RemoteIPInternalProxy</code> and <code>RemoteIPTrustedProxy</code> ; as the JVM doesn't have a
+ * library similar to <a
+ * href="http://apr.apache.org/docs/apr/1.3/group__apr__network__io.html#gb74d21b8898b7c40bf7fd07ad3eb993d">apr_ipsubnet_test</a>, we rely on
+ * regular expressions.
  * </p>
  * <hr>
  * <p>
@@ -191,8 +176,7 @@ import org.apache.tomcat.util.res.StringManager;
  * <p>
  * XForwardedFilter configuration:
  * </p>
- *
- * <pre>
+ * <code>
  * &lt;filter&gt;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;filter-class&gt;org.apache.catalina.filters.RemoteIpFilter&lt;/filter-class&gt;
@@ -218,8 +202,7 @@ import org.apache.tomcat.util.res.StringManager;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
  *    &lt;dispatcher&gt;REQUEST&lt;/dispatcher&gt;
- * &lt;/filter-mapping&gt;
- * </pre>
+ * &lt;/filter-mapping&gt;</code>
  * <table border="1">
  * <caption>Request Values</caption>
  * <tr>
@@ -272,8 +255,7 @@ import org.apache.tomcat.util.res.StringManager;
  * <p>
  * RemoteIpFilter configuration:
  * </p>
- *
- * <pre>
+ * <code>
  * &lt;filter&gt;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;filter-class&gt;org.apache.catalina.filters.RemoteIpFilter&lt;/filter-class&gt;
@@ -299,8 +281,7 @@ import org.apache.tomcat.util.res.StringManager;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
  *    &lt;dispatcher&gt;REQUEST&lt;/dispatcher&gt;
- * &lt;/filter-mapping&gt;
- * </pre>
+ * &lt;/filter-mapping&gt;</code>
  * <table border="1">
  * <caption>Request Values</caption>
  * <tr>
@@ -325,9 +306,8 @@ import org.apache.tomcat.util.res.StringManager;
  * </tr>
  * </table>
  * <p>
- * Note : <code>proxy1</code> and <code>proxy2</code> are both trusted proxies that come in <code>x-forwarded-for</code>
- * header, they both are migrated in <code>x-forwarded-by</code> header. <code>x-forwarded-by</code> is null because all
- * the proxies are trusted or internal.
+ * Note : <code>proxy1</code> and <code>proxy2</code> are both trusted proxies that come in <code>x-forwarded-for</code> header, they both
+ * are migrated in <code>x-forwarded-by</code> header. <code>x-forwarded-by</code> is null because all the proxies are trusted or internal.
  * </p>
  * <hr>
  * <p>
@@ -336,8 +316,7 @@ import org.apache.tomcat.util.res.StringManager;
  * <p>
  * RemoteIpFilter configuration:
  * </p>
- *
- * <pre>
+ * <code>
  * &lt;filter&gt;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;filter-class&gt;org.apache.catalina.filters.RemoteIpFilter&lt;/filter-class&gt;
@@ -363,8 +342,7 @@ import org.apache.tomcat.util.res.StringManager;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
  *    &lt;dispatcher&gt;REQUEST&lt;/dispatcher&gt;
- * &lt;/filter-mapping&gt;
- * </pre>
+ * &lt;/filter-mapping&gt;</code>
  * <table border="1">
  * <caption>Request Values</caption>
  * <tr>
@@ -389,10 +367,9 @@ import org.apache.tomcat.util.res.StringManager;
  * </tr>
  * </table>
  * <p>
- * Note : <code>proxy1</code> and <code>proxy2</code> are both trusted proxies that come in <code>x-forwarded-for</code>
- * header, they both are migrated in <code>x-forwarded-by</code> header. As <code>192.168.0.10</code> is an internal
- * proxy, it does not appear in <code>x-forwarded-by</code>. <code>x-forwarded-by</code> is null because all the proxies
- * are trusted or internal.
+ * Note : <code>proxy1</code> and <code>proxy2</code> are both trusted proxies that come in <code>x-forwarded-for</code> header, they both
+ * are migrated in <code>x-forwarded-by</code> header. As <code>192.168.0.10</code> is an internal proxy, it does not appear in
+ * <code>x-forwarded-by</code>. <code>x-forwarded-by</code> is null because all the proxies are trusted or internal.
  * </p>
  * <hr>
  * <p>
@@ -401,8 +378,7 @@ import org.apache.tomcat.util.res.StringManager;
  * <p>
  * RemoteIpFilter configuration:
  * </p>
- *
- * <pre>
+ * <code>
  * &lt;filter&gt;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;filter-class&gt;org.apache.catalina.filters.RemoteIpFilter&lt;/filter-class&gt;
@@ -428,8 +404,7 @@ import org.apache.tomcat.util.res.StringManager;
  *    &lt;filter-name&gt;RemoteIpFilter&lt;/filter-name&gt;
  *    &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
  *    &lt;dispatcher&gt;REQUEST&lt;/dispatcher&gt;
- * &lt;/filter-mapping&gt;
- * </pre>
+ * &lt;/filter-mapping&gt;</code>
  * <table border="1">
  * <caption>Request Values</caption>
  * <tr>
@@ -456,21 +431,30 @@ import org.apache.tomcat.util.res.StringManager;
  * <p>
  * Note : <code>x-forwarded-by</code> holds the trusted proxy <code>proxy1</code>. <code>x-forwarded-by</code> holds
  * <code>140.211.11.130</code> because <code>untrusted-proxy</code> is not trusted and thus, we cannot trust that
- * <code>untrusted-proxy</code> is the actual remote ip. <code>request.remoteAddr</code> is <code>untrusted-proxy</code>
- * that is an IP verified by <code>proxy1</code>.
+ * <code>untrusted-proxy</code> is the actual remote ip. <code>request.remoteAddr</code> is <code>untrusted-proxy</code> that is an IP
+ * verified by <code>proxy1</code>.
  * </p>
  * <hr>
  */
 public class RemoteIpFilter extends GenericFilter {
 
-    @Serial
     private static final long serialVersionUID = 1L;
 
     public static class XForwardedRequest extends HttpServletRequestWrapper {
 
-        protected final Map<String,List<String>> headers;
+        static final ThreadLocal<SimpleDateFormat[]> threadLocalDateFormats = new ThreadLocal<SimpleDateFormat[]>() {
+            @Override
+            protected SimpleDateFormat[] initialValue() {
+                return new SimpleDateFormat[] {
+                    new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss zzz", Locale.US),
+                    new SimpleDateFormat("EEEEEE, dd-MMM-yy HH:mm:ss zzz", Locale.US),
+                    new SimpleDateFormat("EEE MMMM d HH:mm:ss yyyy", Locale.US)
+                };
 
-        protected String localName;
+            }
+        };
+
+        protected final Map<String, List<String>> headers;
 
         protected int localPort;
 
@@ -482,19 +466,15 @@ public class RemoteIpFilter extends GenericFilter {
 
         protected boolean secure;
 
-        protected String serverName;
-
         protected int serverPort;
 
         public XForwardedRequest(HttpServletRequest request) {
             super(request);
-            this.localName = request.getLocalName();
             this.localPort = request.getLocalPort();
             this.remoteAddr = request.getRemoteAddr();
             this.remoteHost = request.getRemoteHost();
             this.scheme = request.getScheme();
             this.secure = request.isSecure();
-            this.serverName = request.getServerName();
             this.serverPort = request.getServerPort();
 
             headers = new HashMap<>();
@@ -510,24 +490,33 @@ public class RemoteIpFilter extends GenericFilter {
             if (value == null) {
                 return -1;
             }
-            long date = FastHttpDateFormat.parseDate(value);
-            if (date == -1) {
+            DateFormat[] dateFormats = threadLocalDateFormats.get();
+            Date date = null;
+            for (int i = 0; ((i < dateFormats.length) && (date == null)); i++) {
+                DateFormat dateFormat = dateFormats[i];
+                try {
+                    date = dateFormat.parse(value);
+                } catch (Exception ParseException) {
+                    // Ignore
+                }
+            }
+            if (date == null) {
                 throw new IllegalArgumentException(value);
             }
-            return date;
+            return date.getTime();
         }
 
         @Override
         public String getHeader(String name) {
-            Map.Entry<String,List<String>> header = getHeaderEntry(name);
+            Map.Entry<String, List<String>> header = getHeaderEntry(name);
             if (header == null || header.getValue() == null || header.getValue().isEmpty()) {
                 return null;
             }
-            return header.getValue().getFirst();
+            return header.getValue().get(0);
         }
 
-        protected Map.Entry<String,List<String>> getHeaderEntry(String name) {
-            for (Map.Entry<String,List<String>> entry : headers.entrySet()) {
+        protected Map.Entry<String, List<String>> getHeaderEntry(String name) {
+            for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
                 if (entry.getKey().equalsIgnoreCase(name)) {
                     return entry;
                 }
@@ -542,9 +531,9 @@ public class RemoteIpFilter extends GenericFilter {
 
         @Override
         public Enumeration<String> getHeaders(String name) {
-            Map.Entry<String,List<String>> header = getHeaderEntry(name);
+            Map.Entry<String, List<String>> header = getHeaderEntry(name);
             if (header == null || header.getValue() == null) {
-                return Collections.enumeration(Collections.emptyList());
+                return Collections.enumeration(Collections.<String>emptyList());
             }
             return Collections.enumeration(header.getValue());
         }
@@ -556,11 +545,6 @@ public class RemoteIpFilter extends GenericFilter {
                 return -1;
             }
             return Integer.parseInt(value);
-        }
-
-        @Override
-        public String getLocalName() {
-            return localName;
         }
 
         @Override
@@ -584,17 +568,17 @@ public class RemoteIpFilter extends GenericFilter {
         }
 
         @Override
-        public String getServerName() {
-            return serverName;
-        }
-
-        @Override
         public int getServerPort() {
             return serverPort;
         }
 
+        @Override
+        public boolean isSecure() {
+            return secure;
+        }
+
         public void removeHeader(String name) {
-            Map.Entry<String,List<String>> header = getHeaderEntry(name);
+            Map.Entry<String, List<String>> header = getHeaderEntry(name);
             if (header != null) {
                 headers.remove(header.getKey());
             }
@@ -602,17 +586,13 @@ public class RemoteIpFilter extends GenericFilter {
 
         public void setHeader(String name, String value) {
             List<String> values = Collections.singletonList(value);
-            Map.Entry<String,List<String>> header = getHeaderEntry(name);
+            Map.Entry<String, List<String>> header = getHeaderEntry(name);
             if (header == null) {
                 headers.put(name, values);
             } else {
                 header.setValue(values);
             }
 
-        }
-
-        public void setLocalName(String localName) {
-            this.localName = localName;
         }
 
         public void setLocalPort(int localPort) {
@@ -632,11 +612,7 @@ public class RemoteIpFilter extends GenericFilter {
         }
 
         public void setSecure(boolean secure) {
-            super.getRequest().setAttribute(Globals.REMOTE_IP_FILTER_SECURE, Boolean.valueOf(secure));
-        }
-
-        public void setServerName(String serverName) {
-            this.serverName = serverName;
+            this.secure = secure;
         }
 
         public void setServerPort(int serverPort) {
@@ -647,8 +623,18 @@ public class RemoteIpFilter extends GenericFilter {
         public StringBuffer getRequestURL() {
             return RequestUtil.getRequestURL(this);
         }
+
+        @Override
+        public PushBuilder newPushBuilder() {
+            return new ApplicationPushBuilder(this);
+        }
     }
 
+
+    /**
+     * {@link Pattern} for a comma delimited string that support whitespace characters
+     */
+    private static final Pattern commaSeparatedValuesPattern = Pattern.compile("\\s*,\\s*");
 
     protected static final String HTTP_SERVER_PORT_PARAMETER = "httpServerPort";
 
@@ -656,20 +642,16 @@ public class RemoteIpFilter extends GenericFilter {
 
     protected static final String INTERNAL_PROXIES_PARAMETER = "internalProxies";
 
-    // Log must be non-static as loggers are created per class-loader and this
-    // Filter may be used in multiple class loaders
-    private transient Log log = LogFactory.getLog(RemoteIpFilter.class);
-    protected static final StringManager sm = StringManager.getManager(RemoteIpFilter.class);
+    /**
+     * Logger
+     */
+    private static final Log log = LogFactory.getLog(RemoteIpFilter.class);
 
     protected static final String PROTOCOL_HEADER_PARAMETER = "protocolHeader";
 
     protected static final String PROTOCOL_HEADER_HTTPS_VALUE_PARAMETER = "protocolHeaderHttpsValue";
 
-    protected static final String HOST_HEADER_PARAMETER = "hostHeader";
-
     protected static final String PORT_HEADER_PARAMETER = "portHeader";
-
-    protected static final String CHANGE_LOCAL_NAME_PARAMETER = "changeLocalName";
 
     protected static final String CHANGE_LOCAL_PORT_PARAMETER = "changeLocalPort";
 
@@ -679,7 +661,39 @@ public class RemoteIpFilter extends GenericFilter {
 
     protected static final String TRUSTED_PROXIES_PARAMETER = "trustedProxies";
 
-    protected static final String ENABLE_LOOKUPS_PARAMETER = "enableLookups";
+    /**
+     * Convert a given comma delimited list of regular expressions into an array of String
+     *
+     * @param commaDelimitedStrings The string to split
+     * @return array of patterns (non <code>null</code>)
+     */
+    protected static String[] commaDelimitedListToStringArray(String commaDelimitedStrings) {
+        return (commaDelimitedStrings == null || commaDelimitedStrings.length() == 0) ? new String[0] : commaSeparatedValuesPattern
+            .split(commaDelimitedStrings);
+    }
+
+    /**
+     * Convert a list of strings in a comma delimited string.
+     *
+     * @param stringList List of strings
+     * @return concatenated string
+     */
+    protected static String listToCommaDelimitedString(List<String> stringList) {
+        if (stringList == null) {
+            return "";
+        }
+        StringBuilder result = new StringBuilder();
+        for (Iterator<String> it = stringList.iterator(); it.hasNext();) {
+            Object element = it.next();
+            if (element != null) {
+                result.append(element);
+                if (it.hasNext()) {
+                    result.append(", ");
+                }
+            }
+        }
+        return result.toString();
+    }
 
     /**
      * @see #setHttpServerPort(int)
@@ -694,24 +708,21 @@ public class RemoteIpFilter extends GenericFilter {
     /**
      * @see #setInternalProxies(String)
      */
-    private Pattern internalProxies = Pattern.compile("10\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|" +
-            "192\\.168\\.\\d{1,3}\\.\\d{1,3}|" + "169\\.254\\.\\d{1,3}\\.\\d{1,3}|" +
-            "127\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|" + "100\\.6[4-9]{1}\\.\\d{1,3}\\.\\d{1,3}|" +
-            "100\\.[7-9]{1}\\d{1}\\.\\d{1,3}\\.\\d{1,3}|" + "100\\.1[0-1]{1}\\d{1}\\.\\d{1,3}\\.\\d{1,3}|" +
-            "100\\.12[0-7]{1}\\.\\d{1,3}\\.\\d{1,3}|" + "172\\.1[6-9]{1}\\.\\d{1,3}\\.\\d{1,3}|" +
-            "172\\.2[0-9]{1}\\.\\d{1,3}\\.\\d{1,3}|" + "172\\.3[0-1]{1}\\.\\d{1,3}\\.\\d{1,3}|" +
-            "0:0:0:0:0:0:0:1|::1|" + "fe[89ab]\\p{XDigit}:.*|" + "f[cd]\\p{XDigit}{2}+:.*");
+    private Pattern internalProxies = Pattern.compile(
+            "10\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|" +
+            "192\\.168\\.\\d{1,3}\\.\\d{1,3}|" +
+            "169\\.254\\.\\d{1,3}\\.\\d{1,3}|" +
+            "127\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|" +
+            "172\\.1[6-9]{1}\\.\\d{1,3}\\.\\d{1,3}|" +
+            "172\\.2[0-9]{1}\\.\\d{1,3}\\.\\d{1,3}|" +
+            "172\\.3[0-1]{1}\\.\\d{1,3}\\.\\d{1,3}");
 
     /**
      * @see #setProtocolHeader(String)
      */
-    private String protocolHeader = "X-Forwarded-Proto";
+    private String protocolHeader = null;
 
     private String protocolHeaderHttpsValue = "https";
-
-    private String hostHeader = null;
-
-    private boolean changeLocalName = false;
 
     private String portHeader = null;
 
@@ -737,38 +748,33 @@ public class RemoteIpFilter extends GenericFilter {
      */
     private Pattern trustedProxies = null;
 
-    private boolean enableLookups;
+    public void doFilter(HttpServletRequest request, HttpServletResponse response, FilterChain chain) throws IOException, ServletException {
 
-    public void doFilter(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
-            throws IOException, ServletException {
-
-        boolean isInternal = internalProxies != null && internalProxies.matcher(request.getRemoteAddr()).matches();
-
-        if (isInternal || (trustedProxies != null && trustedProxies.matcher(request.getRemoteAddr()).matches())) {
+        if (internalProxies != null &&
+                internalProxies.matcher(request.getRemoteAddr()).matches()) {
             String remoteIp = null;
-            Deque<String> proxiesHeaderValue = new ArrayDeque<>();
+            // In java 6, proxiesHeaderValue should be declared as a java.util.Deque
+            LinkedList<String> proxiesHeaderValue = new LinkedList<>();
             StringBuilder concatRemoteIpHeaderValue = new StringBuilder();
 
             for (Enumeration<String> e = request.getHeaders(remoteIpHeader); e.hasMoreElements();) {
-                if (!concatRemoteIpHeaderValue.isEmpty()) {
+                if (concatRemoteIpHeaderValue.length() > 0) {
                     concatRemoteIpHeaderValue.append(", ");
                 }
 
                 concatRemoteIpHeaderValue.append(e.nextElement());
             }
 
-            String[] remoteIpHeaderValue = StringUtils.splitCommaSeparated(concatRemoteIpHeaderValue.toString());
+            String[] remoteIpHeaderValue = commaDelimitedListToStringArray(concatRemoteIpHeaderValue.toString());
             int idx;
-            if (!isInternal) {
-                proxiesHeaderValue.addFirst(request.getRemoteAddr());
-            }
             // loop on remoteIpHeaderValue to find the first trusted remote ip and to build the proxies chain
             for (idx = remoteIpHeaderValue.length - 1; idx >= 0; idx--) {
                 String currentRemoteIp = remoteIpHeaderValue[idx];
                 remoteIp = currentRemoteIp;
-                if (internalProxies != null && internalProxies.matcher(currentRemoteIp).matches()) {
+                if (internalProxies.matcher(currentRemoteIp).matches()) {
                     // do nothing, internalProxies IPs are not appended to the
-                } else if (trustedProxies != null && trustedProxies.matcher(currentRemoteIp).matches()) {
+                } else if (trustedProxies != null &&
+                        trustedProxies.matcher(currentRemoteIp).matches()) {
                     proxiesHeaderValue.addFirst(currentRemoteIp);
                 } else {
                     idx--; // decrement idx because break statement doesn't do it
@@ -786,33 +792,18 @@ public class RemoteIpFilter extends GenericFilter {
             if (remoteIp != null) {
 
                 xRequest.setRemoteAddr(remoteIp);
-                if (getEnableLookups()) {
-                    // This isn't a lazy lookup but that would be a little more
-                    // invasive - mainly in XForwardedRequest - and if
-                    // enableLookups is true is seems reasonable that the
-                    // hostname will be required so look it up here.
-                    try {
-                        InetAddress inetAddress = InetAddress.getByName(remoteIp);
-                        // We know we need a DNS look up so use getCanonicalHostName()
-                        xRequest.setRemoteHost(inetAddress.getCanonicalHostName());
-                    } catch (UnknownHostException e) {
-                        log.debug(sm.getString("remoteIpFilter.invalidRemoteAddress", remoteIp), e);
-                        xRequest.setRemoteHost(remoteIp);
-                    }
-                } else {
-                    xRequest.setRemoteHost(remoteIp);
-                }
+                xRequest.setRemoteHost(remoteIp);
 
-                if (proxiesHeaderValue.isEmpty()) {
+                if (proxiesHeaderValue.size() == 0) {
                     xRequest.removeHeader(proxiesHeader);
                 } else {
-                    String commaDelimitedListOfProxies = StringUtils.join(proxiesHeaderValue);
+                    String commaDelimitedListOfProxies = listToCommaDelimitedString(proxiesHeaderValue);
                     xRequest.setHeader(proxiesHeader, commaDelimitedListOfProxies);
                 }
-                if (newRemoteIpHeaderValue.isEmpty()) {
+                if (newRemoteIpHeaderValue.size() == 0) {
                     xRequest.removeHeader(remoteIpHeader);
                 } else {
-                    String commaDelimitedRemoteIpHeaderValue = StringUtils.join(newRemoteIpHeaderValue);
+                    String commaDelimitedRemoteIpHeaderValue = listToCommaDelimitedString(newRemoteIpHeaderValue);
                     xRequest.setHeader(remoteIpHeader, commaDelimitedRemoteIpHeaderValue);
                 }
             }
@@ -820,9 +811,8 @@ public class RemoteIpFilter extends GenericFilter {
             if (protocolHeader != null) {
                 String protocolHeaderValue = request.getHeader(protocolHeader);
                 if (protocolHeaderValue == null) {
-                    // Don't modify the secure, scheme and serverPort attributes
-                    // of the request
-                } else if (isForwardedProtoHeaderValueSecure(protocolHeaderValue)) {
+                    // don't modify the secure,scheme and serverPort attributes of the request
+                } else if (protocolHeaderHttpsValue.equalsIgnoreCase(protocolHeaderValue)) {
                     xRequest.setSecure(true);
                     xRequest.setScheme("https");
                     setPorts(xRequest, httpsServerPort);
@@ -833,74 +823,37 @@ public class RemoteIpFilter extends GenericFilter {
                 }
             }
 
-            if (hostHeader != null) {
-                String hostHeaderValue = request.getHeader(hostHeader);
-                if (hostHeaderValue != null) {
-                    try {
-                        int portIndex = Host.parse(hostHeaderValue);
-                        if (portIndex > -1) {
-                            log.debug(sm.getString("remoteIpFilter.invalidHostWithPort", hostHeaderValue, hostHeader));
-                            hostHeaderValue = hostHeaderValue.substring(0, portIndex);
-                        }
-
-                        xRequest.setServerName(hostHeaderValue);
-                        if (isChangeLocalName()) {
-                            xRequest.setLocalName(hostHeaderValue);
-                        }
-
-                    } catch (IllegalArgumentException iae) {
-                        log.debug(sm.getString("remoteIpFilter.invalidHostHeader", hostHeaderValue, hostHeader), iae);
-                    }
-                }
-            }
-            request.setAttribute(Globals.REQUEST_FORWARDED_ATTRIBUTE, Boolean.TRUE);
-
-            if (log.isTraceEnabled()) {
-                log.trace("Incoming request " + request.getRequestURI() + " with originalRemoteAddr [" +
-                        request.getRemoteAddr() + "], originalRemoteHost=[" + request.getRemoteHost() +
-                        "], originalSecure=[" + request.isSecure() + "], originalScheme=[" + request.getScheme() +
-                        "], originalServerName=[" + request.getServerName() + "], originalServerPort=[" +
-                        request.getServerPort() + "] will be seen as newRemoteAddr=[" + xRequest.getRemoteAddr() +
-                        "], newRemoteHost=[" + xRequest.getRemoteHost() + "], newSecure=[" + xRequest.isSecure() +
-                        "], newScheme=[" + xRequest.getScheme() + "], newServerName=[" + xRequest.getServerName() +
-                        "], newServerPort=[" + xRequest.getServerPort() + "]");
+            if (log.isDebugEnabled()) {
+                log.debug("Incoming request " + request.getRequestURI() + " with originalRemoteAddr '" + request.getRemoteAddr()
+                        + "', originalRemoteHost='" + request.getRemoteHost() + "', originalSecure='" + request.isSecure()
+                        + "', originalScheme='" + request.getScheme() + "', original[" + remoteIpHeader + "]='"
+                        + concatRemoteIpHeaderValue + "', original[" + protocolHeader + "]='"
+                        + (protocolHeader == null ? null : request.getHeader(protocolHeader)) + "' will be seen as newRemoteAddr='"
+                        + xRequest.getRemoteAddr() + "', newRemoteHost='" + xRequest.getRemoteHost() + "', newScheme='"
+                        + xRequest.getScheme() + "', newSecure='" + xRequest.isSecure() + "', new[" + remoteIpHeader + "]='"
+                        + xRequest.getHeader(remoteIpHeader) + "', new[" + proxiesHeader + "]='" + xRequest.getHeader(proxiesHeader) + "'");
             }
             if (requestAttributesEnabled) {
-                request.setAttribute(AccessLog.REMOTE_ADDR_ATTRIBUTE, xRequest.getRemoteAddr());
-                request.setAttribute(Globals.REMOTE_ADDR_ATTRIBUTE, xRequest.getRemoteAddr());
-                request.setAttribute(AccessLog.REMOTE_HOST_ATTRIBUTE, xRequest.getRemoteHost());
-                request.setAttribute(AccessLog.PROTOCOL_ATTRIBUTE, xRequest.getProtocol());
-                request.setAttribute(AccessLog.SERVER_NAME_ATTRIBUTE, xRequest.getServerName());
-                request.setAttribute(AccessLog.SERVER_PORT_ATTRIBUTE, Integer.valueOf(xRequest.getServerPort()));
+                request.setAttribute(AccessLog.REMOTE_ADDR_ATTRIBUTE,
+                        xRequest.getRemoteAddr());
+                request.setAttribute(Globals.REMOTE_ADDR_ATTRIBUTE,
+                        xRequest.getRemoteAddr());
+                request.setAttribute(AccessLog.REMOTE_HOST_ATTRIBUTE,
+                        xRequest.getRemoteHost());
+                request.setAttribute(AccessLog.PROTOCOL_ATTRIBUTE,
+                        xRequest.getProtocol());
+                request.setAttribute(AccessLog.SERVER_PORT_ATTRIBUTE,
+                        Integer.valueOf(xRequest.getServerPort()));
             }
             chain.doFilter(xRequest, response);
         } else {
-            if (log.isTraceEnabled()) {
-                log.trace("Skip RemoteIpFilter for request " + request.getRequestURI() + " with originalRemoteAddr '" +
-                        request.getRemoteAddr() + "'");
+            if (log.isDebugEnabled()) {
+                log.debug("Skip RemoteIpFilter for request " + request.getRequestURI() + " with originalRemoteAddr '"
+                        + request.getRemoteAddr() + "'");
             }
             chain.doFilter(request, response);
         }
 
-    }
-
-    /*
-     * Considers the value to be secure if it exclusively holds forwards for {@link #protocolHeaderHttpsValue}.
-     */
-    private boolean isForwardedProtoHeaderValueSecure(String protocolHeaderValue) {
-        if (!protocolHeaderValue.contains(",")) {
-            return protocolHeaderHttpsValue.equalsIgnoreCase(protocolHeaderValue);
-        }
-        String[] forwardedProtocols = StringUtils.splitCommaSeparated(protocolHeaderValue);
-        if (forwardedProtocols.length == 0) {
-            return false;
-        }
-        for (String forwardedProtocol : forwardedProtocols) {
-            if (!protocolHeaderHttpsValue.equalsIgnoreCase(forwardedProtocol)) {
-                return false;
-            }
-        }
-        return true;
     }
 
     private void setPorts(XForwardedRequest xrequest, int defaultPort) {
@@ -911,7 +864,8 @@ public class RemoteIpFilter extends GenericFilter {
                 try {
                     port = Integer.parseInt(portHeaderValue);
                 } catch (NumberFormatException nfe) {
-                    log.debug(sm.getString("remoteIpFilter.invalidPort", portHeaderValue, getPortHeader()), nfe);
+                    log.debug("Invalid port value [" + portHeaderValue +
+                            "] provided in header [" + getPortHeader() + "]");
                 }
             }
         }
@@ -922,21 +876,16 @@ public class RemoteIpFilter extends GenericFilter {
     }
 
     /**
-     * Wrap the incoming <code>request</code> in a {@link XForwardedRequest} if the http header
-     * <code>x-forwarded-for</code> is not empty. {@inheritDoc}
+     * Wrap the incoming <code>request</code> in a {@link XForwardedRequest} if the http header <code>x-forwarded-for</code> is not empty.
+     * {@inheritDoc}
      */
     @Override
-    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain)
-            throws IOException, ServletException {
+    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
         if (request instanceof HttpServletRequest && response instanceof HttpServletResponse) {
-            doFilter((HttpServletRequest) request, (HttpServletResponse) response, chain);
+            doFilter((HttpServletRequest)request, (HttpServletResponse)response, chain);
         } else {
             chain.doFilter(request, response);
         }
-    }
-
-    public boolean isChangeLocalName() {
-        return changeLocalName;
     }
 
     public boolean isChangeLocalPort() {
@@ -973,8 +922,8 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * @see #setRequestAttributesEnabled(boolean)
-     *
-     * @return <code>true</code> if the attributes will be logged, otherwise <code>false</code>
+     * @return <code>true</code> if the attributes will be logged, otherwise
+     *         <code>false</code>
      */
     public boolean getRequestAttributesEnabled() {
         return requestAttributesEnabled;
@@ -982,10 +931,6 @@ public class RemoteIpFilter extends GenericFilter {
 
     public Pattern getTrustedProxies() {
         return trustedProxies;
-    }
-
-    public boolean getEnableLookups() {
-        return enableLookups;
     }
 
     @Override
@@ -1002,16 +947,8 @@ public class RemoteIpFilter extends GenericFilter {
             setProtocolHeaderHttpsValue(getInitParameter(PROTOCOL_HEADER_HTTPS_VALUE_PARAMETER));
         }
 
-        if (getInitParameter(HOST_HEADER_PARAMETER) != null) {
-            setHostHeader(getInitParameter(HOST_HEADER_PARAMETER));
-        }
-
         if (getInitParameter(PORT_HEADER_PARAMETER) != null) {
             setPortHeader(getInitParameter(PORT_HEADER_PARAMETER));
-        }
-
-        if (getInitParameter(CHANGE_LOCAL_NAME_PARAMETER) != null) {
-            setChangeLocalName(Boolean.parseBoolean(getInitParameter(CHANGE_LOCAL_NAME_PARAMETER)));
         }
 
         if (getInitParameter(CHANGE_LOCAL_PORT_PARAMETER) != null) {
@@ -1034,8 +971,7 @@ public class RemoteIpFilter extends GenericFilter {
             try {
                 setHttpServerPort(Integer.parseInt(getInitParameter(HTTP_SERVER_PORT_PARAMETER)));
             } catch (NumberFormatException e) {
-                throw new NumberFormatException(sm.getString("remoteIpFilter.invalidNumber", HTTP_SERVER_PORT_PARAMETER,
-                        e.getLocalizedMessage()));
+                throw new NumberFormatException("Illegal " + HTTP_SERVER_PORT_PARAMETER + " : " + e.getMessage());
             }
         }
 
@@ -1043,42 +979,21 @@ public class RemoteIpFilter extends GenericFilter {
             try {
                 setHttpsServerPort(Integer.parseInt(getInitParameter(HTTPS_SERVER_PORT_PARAMETER)));
             } catch (NumberFormatException e) {
-                throw new NumberFormatException(sm.getString("remoteIpFilter.invalidNumber",
-                        HTTPS_SERVER_PORT_PARAMETER, e.getLocalizedMessage()));
+                throw new NumberFormatException("Illegal " + HTTPS_SERVER_PORT_PARAMETER + " : " + e.getMessage());
             }
         }
-
-        if (getInitParameter(ENABLE_LOOKUPS_PARAMETER) != null) {
-            setEnableLookups(Boolean.parseBoolean(getInitParameter(ENABLE_LOOKUPS_PARAMETER)));
-        }
     }
 
     /**
      * <p>
-     * If <code>true</code>, the return values for both {@link ServletRequest#getLocalName()} and
-     * {@link ServletRequest#getServerName()} will be modified by this Filter rather than just
-     * {@link ServletRequest#getServerName()}.
-     * </p>
-     * <p>
-     * Default value : <code>false</code>
-     * </p>
-     *
-     * @param changeLocalName The new flag value
-     */
-    public void setChangeLocalName(boolean changeLocalName) {
-        this.changeLocalName = changeLocalName;
-    }
-
-    /**
-     * <p>
-     * If <code>true</code>, the return values for both {@link ServletRequest#getLocalPort()} and
-     * {@link ServletRequest#getServerPort()} will be modified by this Filter rather than just
+     * If <code>true</code>, the return values for both {@link
+     * ServletRequest#getLocalPort()} and {@link ServletRequest#getServerPort()}
+     * will be modified by this Filter rather than just
      * {@link ServletRequest#getServerPort()}.
      * </p>
      * <p>
      * Default value : <code>false</code>
      * </p>
-     *
      * @param changeLocalPort The new flag value
      */
     public void setChangeLocalPort(boolean changeLocalPort) {
@@ -1087,13 +1002,12 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * Server Port value if the {@link #protocolHeader} indicates HTTP (i.e. {@link #protocolHeader} is not null and has
-     * a value different of {@link #protocolHeaderHttpsValue}).
+     * Server Port value if the {@link #protocolHeader} indicates HTTP (i.e. {@link #protocolHeader} is not null and
+     * has a value different of {@link #protocolHeaderHttpsValue}).
      * </p>
      * <p>
      * Default value : 80
      * </p>
-     *
      * @param httpServerPort The server port to use
      */
     public void setHttpServerPort(int httpServerPort) {
@@ -1107,7 +1021,6 @@ public class RemoteIpFilter extends GenericFilter {
      * <p>
      * Default value : 443
      * </p>
-     *
      * @param httpsServerPort The server port to use
      */
     public void setHttpsServerPort(int httpsServerPort) {
@@ -1119,14 +1032,12 @@ public class RemoteIpFilter extends GenericFilter {
      * Regular expression that defines the internal proxies.
      * </p>
      * <p>
-     * Default value :
-     * 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254.\d{1,3}.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|0:0:0:0:0:0:0:1
+     * Default value : 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254.\d{1,3}.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}
      * </p>
-     *
      * @param internalProxies The regexp
      */
     public void setInternalProxies(String internalProxies) {
-        if (internalProxies == null || internalProxies.isEmpty()) {
+        if (internalProxies == null || internalProxies.length() == 0) {
             this.internalProxies = null;
         } else {
             this.internalProxies = Pattern.compile(internalProxies);
@@ -1135,27 +1046,13 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * Header that holds the incoming host, usually named <code>X-Forwarded-Host</code>.
-     * </p>
-     * <p>
-     * Default value : <code>null</code>
-     * </p>
-     *
-     * @param hostHeader The header name
-     */
-    public void setHostHeader(String hostHeader) {
-        this.hostHeader = hostHeader;
-    }
-
-    /**
-     * <p>
-     * Header that holds the incoming port, usually named <code>X-Forwarded-Port</code>. If <code>null</code>,
+     * Header that holds the incoming port, usually named
+     * <code>X-Forwarded-Port</code>. If <code>null</code>,
      * {@link #httpServerPort} or {@link #httpsServerPort} will be used.
      * </p>
      * <p>
      * Default value : <code>null</code>
      * </p>
-     *
      * @param portHeader The header name
      */
     public void setPortHeader(String portHeader) {
@@ -1164,13 +1061,12 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * Header that holds the incoming protocol, usually named <code>X-Forwarded-Proto</code>. If <code>null</code>,
-     * request.scheme and request.secure will not be modified.
+     * Header that holds the incoming protocol, usually named <code>X-Forwarded-Proto</code>. If <code>null</code>, request.scheme and
+     * request.secure will not be modified.
      * </p>
      * <p>
-     * Default value : <code>X-Forwarded-Proto</code>
+     * Default value : <code>null</code>
      * </p>
-     *
      * @param protocolHeader The header name
      */
     public void setProtocolHeader(String protocolHeader) {
@@ -1179,12 +1075,11 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * Case-insensitive value of the protocol header to indicate that the incoming http request uses HTTPS.
+     * Case insensitive value of the protocol header to indicate that the incoming http request uses HTTPS.
      * </p>
      * <p>
      * Default value : <code>https</code>
      * </p>
-     *
      * @param protocolHeaderHttpsValue The header value
      */
     public void setProtocolHeaderHttpsValue(String protocolHeaderHttpsValue) {
@@ -1193,21 +1088,19 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * The proxiesHeader directive specifies a header into which mod_remoteip will collect a list of all of the
-     * intermediate client IP addresses trusted to resolve the actual remote IP. Note that intermediate
-     * RemoteIPTrustedProxy addresses are recorded in this header, while any intermediate RemoteIPInternalProxy
-     * addresses are discarded.
+     * The proxiesHeader directive specifies a header into which mod_remoteip will collect a list of all of the intermediate client IP
+     * addresses trusted to resolve the actual remote IP. Note that intermediate RemoteIPTrustedProxy addresses are recorded in this header,
+     * while any intermediate RemoteIPInternalProxy addresses are discarded.
      * </p>
      * <p>
      * Name of the http header that holds the list of trusted proxies that has been traversed by the http request.
      * </p>
      * <p>
-     * The value of this header can be comma-delimited.
+     * The value of this header can be comma delimited.
      * </p>
      * <p>
      * Default value : <code>X-Forwarded-By</code>
      * </p>
-     *
      * @param proxiesHeader The header name
      */
     public void setProxiesHeader(String proxiesHeader) {
@@ -1219,12 +1112,11 @@ public class RemoteIpFilter extends GenericFilter {
      * Name of the http header from which the remote ip is extracted.
      * </p>
      * <p>
-     * The value of this header can be comma-delimited.
+     * The value of this header can be comma delimited.
      * </p>
      * <p>
      * Default value : <code>X-Forwarded-For</code>
      * </p>
-     *
      * @param remoteIpHeader The header name
      */
     public void setRemoteIpHeader(String remoteIpHeader) {
@@ -1232,9 +1124,12 @@ public class RemoteIpFilter extends GenericFilter {
     }
 
     /**
-     * Should this filter set request attributes for IP address, Hostname, protocol and port used for the request? These
-     * are typically used in conjunction with an {@link AccessLog} which will otherwise log the original values. Default
-     * is <code>true</code>. The attributes set are:
+     * Should this filter set request attributes for IP address, Hostname,
+     * protocol and port used for the request? This are typically used in
+     * conjunction with an {@link AccessLog} which will otherwise log the
+     * original values. Default is <code>true</code>.
+     *
+     * The attributes set are:
      * <ul>
      * <li>org.apache.catalina.AccessLog.RemoteAddr</li>
      * <li>org.apache.catalina.AccessLog.RemoteHost</li>
@@ -1243,8 +1138,9 @@ public class RemoteIpFilter extends GenericFilter {
      * <li>org.apache.tomcat.remoteAddr</li>
      * </ul>
      *
-     * @param requestAttributesEnabled <code>true</code> causes the attributes to be set, <code>false</code> disables
-     *                                     the setting of the attributes.
+     * @param requestAttributesEnabled  <code>true</code> causes the attributes
+     *                                  to be set, <code>false</code> disables
+     *                                  the setting of the attributes.
      */
     public void setRequestAttributesEnabled(boolean requestAttributesEnabled) {
         this.requestAttributesEnabled = requestAttributesEnabled;
@@ -1252,33 +1148,19 @@ public class RemoteIpFilter extends GenericFilter {
 
     /**
      * <p>
-     * Regular expression defining proxies that are trusted when they appear in the {@link #remoteIpHeader} header.
+     * Regular expression defining proxies that are trusted when they appear in
+     * the {@link #remoteIpHeader} header.
      * </p>
      * <p>
      * Default value : empty list, no external proxy is trusted.
      * </p>
-     *
      * @param trustedProxies The trusted proxies regexp
      */
     public void setTrustedProxies(String trustedProxies) {
-        if (trustedProxies == null || trustedProxies.isEmpty()) {
+        if (trustedProxies == null || trustedProxies.length() == 0) {
             this.trustedProxies = null;
         } else {
             this.trustedProxies = Pattern.compile(trustedProxies);
         }
-    }
-
-    public void setEnableLookups(boolean enableLookups) {
-        this.enableLookups = enableLookups;
-    }
-
-    /*
-     * Log objects are not Serializable but this Filter is because it extends GenericFilter. Tomcat won't serialize a
-     * Filter but in case something else does...
-     */
-    @Serial
-    private void readObject(ObjectInputStream ois) throws ClassNotFoundException, IOException {
-        ois.defaultReadObject();
-        log = LogFactory.getLog(RemoteIpFilter.class);
     }
 }
