@@ -23,11 +23,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.nio.charset.UnsupportedCharsetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -37,25 +33,32 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.TreeMap;
 
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServlet;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import org.junit.Assert;
+import org.junit.BeforeClass;
+import org.junit.Ignore;
 import org.junit.Test;
 
 import org.apache.catalina.Context;
-import org.apache.catalina.Globals;
 import org.apache.catalina.authenticator.BasicAuthenticator;
+import org.apache.catalina.filters.FailedRequestFilter;
 import org.apache.catalina.startup.SimpleHttpClient;
 import org.apache.catalina.startup.TesterMapRealm;
 import org.apache.catalina.startup.Tomcat;
 import org.apache.catalina.startup.TomcatBaseTest;
 import org.apache.tomcat.unittest.TesterRequest;
 import org.apache.tomcat.util.buf.ByteChunk;
-import org.apache.tomcat.util.buf.EncodedSolidusHandling;
-import org.apache.tomcat.util.buf.StringUtils;
+import org.apache.tomcat.util.descriptor.web.FilterDef;
+import org.apache.tomcat.util.descriptor.web.FilterMap;
 import org.apache.tomcat.util.descriptor.web.LoginConfig;
 
 /**
@@ -63,49 +66,75 @@ import org.apache.tomcat.util.descriptor.web.LoginConfig;
  */
 public class TestRequest extends TomcatBaseTest {
 
+    @BeforeClass
+    public static void setup() {
+        // Some of these tests need this and it used statically so set it once
+        System.setProperty("org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH", "true");
+    }
+
     /**
-     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=37794 POST parameters are not returned from a call
-     * to any of the {@link HttpServletRequest} getParameterXXX() methods if the request is chunked.
+     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=37794
+     * POST parameters are not returned from a call to
+     * any of the {@link HttpServletRequest} getParameterXXX() methods if the
+     * request is chunked.
      */
     @Test
     public void testBug37794() {
-        Bug37794Client client = new Bug37794Client();
+        Bug37794Client client = new Bug37794Client(true);
 
         // Edge cases around zero
         client.doRequest(-1, false); // Unlimited
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertTrue(client.isResponseBodyOK());
+        assertTrue(client.isResponse200());
+        assertTrue(client.isResponseBodyOK());
         client.reset();
         client.doRequest(0, false); // 0 bytes - too small should fail
-        Assert.assertTrue(client.isResponse413());
+        assertTrue(client.isResponse413());
         client.reset();
         client.doRequest(1, false); // 1 byte - too small should fail
-        Assert.assertTrue(client.isResponse413());
+        assertTrue(client.isResponse413());
+
+        client.reset();
 
         // Edge cases around actual content length
         client.reset();
         client.doRequest(6, false); // Too small should fail
-        Assert.assertTrue(client.isResponse413());
+        assertTrue(client.isResponse413());
         client.reset();
         client.doRequest(7, false); // Just enough should pass
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertTrue(client.isResponseBodyOK());
+        assertTrue(client.isResponse200());
+        assertTrue(client.isResponseBodyOK());
         client.reset();
         client.doRequest(8, false); // 1 extra - should pass
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertTrue(client.isResponseBodyOK());
+        assertTrue(client.isResponse200());
+        assertTrue(client.isResponseBodyOK());
 
         // Much larger
         client.reset();
         client.doRequest(8096, false); // Plenty of space - should pass
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertTrue(client.isResponseBodyOK());
+        assertTrue(client.isResponse200());
+        assertTrue(client.isResponseBodyOK());
 
         // Check for case insensitivity
         client.reset();
         client.doRequest(8096, true); // Plenty of space - should pass
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertTrue(client.isResponseBodyOK());
+        assertTrue(client.isResponse200());
+        assertTrue(client.isResponseBodyOK());
+    }
+
+    /**
+     * Additional test for failed requests handling when no FailedRequestFilter
+     * is defined.
+     */
+    @Test
+    public void testBug37794withoutFilter() {
+        Bug37794Client client = new Bug37794Client(false);
+
+        // Edge cases around actual content length
+        client.reset();
+        client.doRequest(6, false); // Too small should fail
+        // Response code will be OK, but parameters list will be empty
+        assertTrue(client.isResponse200());
+        assertEquals("", client.getResponseBody());
     }
 
     private static class Bug37794Servlet extends HttpServlet {
@@ -116,7 +145,8 @@ public class TestRequest extends TomcatBaseTest {
          * Only interested in the parameters and values for POST requests.
          */
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             // Just echo the parameters and values back as plain text
             resp.setContentType("text/plain");
 
@@ -136,17 +166,33 @@ public class TestRequest extends TomcatBaseTest {
      */
     private class Bug37794Client extends SimpleHttpClient {
 
+        private final boolean createFilter;
+
         private boolean init;
 
+        public Bug37794Client(boolean createFilter) {
+            this.createFilter = createFilter;
+        }
+
         private synchronized void init() throws Exception {
-            if (init) {
-                return;
-            }
+            if (init) return;
 
             Tomcat tomcat = getTomcatInstance();
             Context root = tomcat.addContext("", TEMP_DIR);
             Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
             root.addServletMappingDecoded("/test", "Bug37794");
+
+            if (createFilter) {
+                FilterDef failedRequestFilter = new FilterDef();
+                failedRequestFilter.setFilterName("failedRequestFilter");
+                failedRequestFilter.setFilterClass(
+                        FailedRequestFilter.class.getName());
+                FilterMap failedRequestFilterMap = new FilterMap();
+                failedRequestFilterMap.setFilterName("failedRequestFilter");
+                failedRequestFilterMap.addURLPatternDecoded("/*");
+                root.addFilterDef(failedRequestFilter);
+                root.addFilterMap(failedRequestFilterMap);
+            }
 
             tomcat.start();
 
@@ -168,37 +214,31 @@ public class TestRequest extends TomcatBaseTest {
                 // Send request in two parts
                 String[] request = new String[2];
                 if (ucChunkedHead) {
-                    // @formatter:off
                     request[0] =
                         "POST http://localhost:8080/test HTTP/1.1" + CRLF +
                         "Host: localhost:8080" + CRLF +
-                        SimpleHttpClient.HTTP_HEADER_CONTENT_TYPE_FORM_URL_ENCODING +
+                        "content-type: application/x-www-form-urlencoded" + CRLF +
                         "Transfer-Encoding: CHUNKED" + CRLF +
                         "Connection: close" + CRLF +
                         CRLF +
                         "3" + CRLF +
                         "a=1" + CRLF;
-                    // @formatter:on
                 } else {
-                    // @formatter:off
                     request[0] =
                         "POST http://localhost:8080/test HTTP/1.1" + CRLF +
                         "Host: localhost:8080" + CRLF +
-                        SimpleHttpClient.HTTP_HEADER_CONTENT_TYPE_FORM_URL_ENCODING +
+                        "content-type: application/x-www-form-urlencoded" + CRLF +
                         "Transfer-Encoding: chunked" + CRLF +
                         "Connection: close" + CRLF +
                         CRLF +
                         "3" + CRLF +
                         "a=1" + CRLF;
-                    // @formatter:on
                 }
-                // @formatter:off
                 request[1] =
                     "4" + CRLF +
                     "&b=2" + CRLF +
                     "0" + CRLF +
                     CRLF;
-                // @formatter:on
 
                 setRequest(request);
                 processRequest(); // blocks until response has been read
@@ -228,7 +268,9 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Test case for <a href="https://bz.apache.org/bugzilla/show_bug.cgi?id=38113">bug 38118</a>.
+     * Test case for
+     * <a href="https://bz.apache.org/bugzilla/show_bug.cgi?id=38113">bug
+     * 38118</a>.
      */
     @Test
     public void testBug38113() throws Exception {
@@ -236,7 +278,7 @@ public class TestRequest extends TomcatBaseTest {
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = getProgrammaticRootContext();
+        Context ctx = tomcat.addContext("", null);
 
         // Add the Servlet
         Tomcat.addServlet(ctx, "servlet", new EchoQueryStringServlet());
@@ -246,15 +288,15 @@ public class TestRequest extends TomcatBaseTest {
 
         // No query string
         ByteChunk res = getUrl("http://localhost:" + getPort() + "/");
-        Assert.assertEquals("QueryString=null", res.toString());
+        assertEquals("QueryString=null", res.toString());
 
         // Query string
         res = getUrl("http://localhost:" + getPort() + "/?a=b");
-        Assert.assertEquals("QueryString=a=b", res.toString());
+        assertEquals("QueryString=a=b", res.toString());
 
         // Empty string
         res = getUrl("http://localhost:" + getPort() + "/?");
-        Assert.assertEquals("QueryString=", res.toString());
+        assertEquals("QueryString=", res.toString());
     }
 
     private static final class EchoQueryStringServlet extends HttpServlet {
@@ -262,7 +304,8 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             resp.setContentType("text/plain");
             PrintWriter pw = resp.getWriter();
             pw.print("QueryString=" + req.getQueryString());
@@ -270,15 +313,16 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Test case for {@link Request#login(String, String)} and {@link Request#logout()}.
+     * Test case for {@link Request#login(String, String)} and
+     * {@link Request#logout()}.
      */
     @Test
-    public void testLoginLogout() throws Exception {
+    public void testLoginLogout() throws Exception{
         // Setup Tomcat instance
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = getProgrammaticRootContext();
+        Context ctx = tomcat.addContext("", null);
 
         LoginConfig config = new LoginConfig();
         config.setAuthMethod("BASIC");
@@ -295,7 +339,7 @@ public class TestRequest extends TomcatBaseTest {
         tomcat.start();
 
         ByteChunk res = getUrl("http://localhost:" + getPort() + "/");
-        Assert.assertEquals(LoginLogoutServlet.OK, res.toString());
+        assertEquals(LoginLogoutServlet.OK, res.toString());
     }
 
     private static final class LoginLogoutServlet extends HttpServlet {
@@ -305,25 +349,22 @@ public class TestRequest extends TomcatBaseTest {
         private static final String OK = "OK";
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
 
             req.login(USER, PWD);
 
-            if (!req.getRemoteUser().equals(USER)) {
+            if (!req.getRemoteUser().equals(USER))
                 throw new ServletException();
-            }
-            if (!req.getUserPrincipal().getName().equals(USER)) {
+            if (!req.getUserPrincipal().getName().equals(USER))
                 throw new ServletException();
-            }
 
             req.logout();
 
-            if (req.getRemoteUser() != null) {
+            if (req.getRemoteUser() != null)
                 throw new ServletException();
-            }
-            if (req.getUserPrincipal() != null) {
+            if (req.getUserPrincipal() != null)
                 throw new ServletException();
-            }
 
             resp.getWriter().write(OK);
         }
@@ -333,20 +374,22 @@ public class TestRequest extends TomcatBaseTest {
     @Test
     public void testBug49424NoChunking() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("",
+                System.getProperty("java.io.tmpdir"));
         Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
         root.addServletMappingDecoded("/", "Bug37794");
         tomcat.start();
 
         HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/");
         InputStream is = conn.getInputStream();
-        Assert.assertNotNull(is);
+        assertNotNull(is);
     }
 
     @Test
     public void testBug49424WithChunking() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("",
+                System.getProperty("java.io.tmpdir"));
         Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
         root.addServletMappingDecoded("/", "Bug37794");
         tomcat.start();
@@ -354,12 +397,14 @@ public class TestRequest extends TomcatBaseTest {
         HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/");
         conn.setChunkedStreamingMode(8 * 1024);
         InputStream is = conn.getInputStream();
-        Assert.assertNotNull(is);
+        assertNotNull(is);
     }
 
     /**
-     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=48692 PUT requests should be able to fetch request
-     * parameters coming from the request body (when properly configured using the new parseBodyMethod setting).
+     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=48692
+     * PUT requests should be able to fetch request parameters coming from
+     * the request body (when properly configured using the new parseBodyMethod
+     * setting).
      */
     @Test
     public void testBug48692() {
@@ -368,8 +413,11 @@ public class TestRequest extends TomcatBaseTest {
         // Make sure GET works properly
         client.doRequest("GET", "foo=bar", null, null, false);
 
-        Assert.assertTrue("Non-200 response for GET request", client.isResponse200());
-        Assert.assertEquals("Incorrect response for GET request", "foo=bar", client.getResponseBody());
+        assertTrue("Non-200 response for GET request",
+                   client.isResponse200());
+        assertEquals("Incorrect response for GET request",
+                     "foo=bar",
+                     client.getResponseBody());
 
         client.reset();
 
@@ -377,52 +425,72 @@ public class TestRequest extends TomcatBaseTest {
         // Make sure POST works properly
         //
         // POST with separate GET and POST parameters
-        client.doRequest("POST", "foo=bar", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz", true);
+        client.doRequest("POST", "foo=bar", "application/x-www-form-urlencoded", "bar=baz", true);
 
-        Assert.assertTrue("Non-200 response for POST request", client.isResponse200());
-        Assert.assertEquals("Incorrect response for POST request", "bar=baz,foo=bar", client.getResponseBody());
+        assertTrue("Non-200 response for POST request",
+                   client.isResponse200());
+        assertEquals("Incorrect response for POST request",
+                     "bar=baz,foo=bar",
+                     client.getResponseBody());
 
         client.reset();
 
         // POST with overlapping GET and POST parameters
-        client.doRequest("POST", "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", true);
+        client.doRequest("POST", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", true);
 
-        Assert.assertTrue("Non-200 response for POST request", client.isResponse200());
-        Assert.assertEquals("Incorrect response for POST request", "bar=baz,bar=foo,foo=bar,foo=baz",
-                client.getResponseBody());
+        assertTrue("Non-200 response for POST request",
+                   client.isResponse200());
+        assertEquals("Incorrect response for POST request",
+                     "bar=baz,bar=foo,foo=bar,foo=baz",
+                     client.getResponseBody());
 
         client.reset();
 
         // PUT without POST-style parsing
-        client.doRequest("PUT", "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", false);
+        client.doRequest("PUT", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", false);
 
-        Assert.assertTrue("Non-200 response for PUT/noparse request", client.isResponse200());
-        Assert.assertEquals("Incorrect response for PUT request", "bar=foo,foo=bar", client.getResponseBody());
+        assertTrue("Non-200 response for PUT/noparse request",
+                   client.isResponse200());
+        assertEquals("Incorrect response for PUT request",
+                     "bar=foo,foo=bar",
+                     client.getResponseBody());
 
         client.reset();
 
         // PUT with POST-style parsing
-        client.doRequest("PUT", "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", true);
+        client.doRequest("PUT", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", true);
 
-        Assert.assertTrue("Non-200 response for PUT request", client.isResponse200());
-        Assert.assertEquals("Incorrect response for PUT/parse request", "bar=baz,bar=foo,foo=bar,foo=baz",
-                client.getResponseBody());
+        assertTrue("Non-200 response for PUT request",
+                   client.isResponse200());
+        assertEquals("Incorrect response for PUT/parse request",
+                     "bar=baz,bar=foo,foo=bar,foo=baz",
+                     client.getResponseBody());
 
         client.reset();
+
+        /*
+        private Exception doRequest(String method,
+                                    String queryString,
+                                    String contentType,
+                                    String requestBody,
+                                    boolean allowBody) {
+        */
     }
 
     @Test
     public void testBug54984() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("",
+                System.getProperty("java.io.tmpdir"));
         root.setAllowCasualMultipartParsing(true);
         Tomcat.addServlet(root, "Bug54984", new Bug54984Servlet());
         root.addServletMappingDecoded("/", "Bug54984");
         tomcat.start();
 
-        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/parseParametersBeforeParseParts");
+        HttpURLConnection conn = getConnection("http://localhost:" + getPort()
+                + "/parseParametersBeforeParseParts");
 
-        prepareMultiPartRequest(conn);
+        prepareRequestBug54984(conn);
 
         checkResponseBug54984(conn);
 
@@ -430,7 +498,7 @@ public class TestRequest extends TomcatBaseTest {
 
         conn = getConnection("http://localhost:" + getPort() + "/");
 
-        prepareMultiPartRequest(conn);
+        prepareRequestBug54984(conn);
 
         checkResponseBug54984(conn);
 
@@ -445,33 +513,36 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         /**
-         * Only interested in the parameters and values for requests. Note: echos parameters in alphabetical order.
+         * Only interested in the parameters and values for requests.
+         * Note: echos parameters in alphabetical order.
          */
         @Override
-        protected void service(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void service(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
             // Just echo the parameters and values back as plain text
             resp.setContentType("text/plain");
             resp.setCharacterEncoding("UTF-8");
 
             PrintWriter out = resp.getWriter();
 
-            TreeMap<String,String[]> parameters = new TreeMap<>(req.getParameterMap());
+            TreeMap<String,String[]> parameters =
+                    new TreeMap<>(req.getParameterMap());
 
             boolean first = true;
 
-            for (String name : parameters.keySet()) {
+            for(String name: parameters.keySet()) {
                 String[] values = req.getParameterValues(name);
 
-                Arrays.sort(values);
+                java.util.Arrays.sort(values);
 
-                for (String value : values) {
-                    if (first) {
+                for(int i=0; i<values.length; ++i)
+                {
+                    if(first)
                         first = false;
-                    } else {
+                    else
                         out.print(",");
-                    }
 
-                    out.print(name + "=" + value);
+                    out.print(name + "=" + values[i]);
                 }
             }
         }
@@ -485,9 +556,7 @@ public class TestRequest extends TomcatBaseTest {
         private boolean init;
 
         private synchronized void init() throws Exception {
-            if (init) {
-                return;
-            }
+            if (init) return;
 
             Tomcat tomcat = getTomcatInstance();
             Context root = tomcat.addContext("", TEMP_DIR);
@@ -500,39 +569,42 @@ public class TestRequest extends TomcatBaseTest {
             init = true;
         }
 
-        private Exception doRequest(String method, String queryString, String contentType, String requestBody,
-                boolean allowBody) {
+        private Exception doRequest(String method,
+                                    String queryString,
+                                    String contentType,
+                                    String requestBody,
+                                    boolean allowBody) {
             Tomcat tomcat = getTomcatInstance();
 
             try {
                 init();
-                if (allowBody) {
+                if(allowBody)
                     tomcat.getConnector().setParseBodyMethods(method);
-                } else {
+                else
                     tomcat.getConnector().setParseBodyMethods(""); // never parse
-                }
 
                 // Open connection
                 connect();
 
                 // Re-encode the request body so that bytes = characters
-                if (null != requestBody) {
+                if(null != requestBody)
                     requestBody = new String(requestBody.getBytes("UTF-8"), "ASCII");
-                }
 
                 // Send specified request body using method
-                // @formatter:off
                 String[] request = {
-                     method + " http://localhost:" + getPort() + "/echo" +
-                             (null == queryString ? "" : ("?" + queryString)) + " HTTP/1.1" + CRLF +
-                     "Host: localhost:" + getPort() + CRLF +
-                     (null == contentType ? "" : ("Content-Type: " + contentType + CRLF)) +
-                     "Connection: close" + CRLF +
-                     (null == requestBody ? "" : "Content-Length: " + requestBody.length() + CRLF) +
-                     CRLF +
-                     (null == requestBody ? "" : requestBody)
+                    (
+                     method + " http://localhost:" + getPort() + "/echo"
+                     + (null == queryString ? "" : ("?" + queryString))
+                     + " HTTP/1.1" + CRLF
+                     + "Host: localhost:" + getPort() + CRLF
+                     + (null == contentType ? ""
+                        : ("Content-Type: " + contentType + CRLF))
+                     + "Connection: close" + CRLF
+                     + (null == requestBody ? "" : "Content-Length: " + requestBody.length() + CRLF)
+                     + CRLF
+                     + (null == requestBody ? "" : requestBody)
+                     )
                 };
-                // @formatter:on
 
                 setRequest(request);
                 processRequest(); // blocks until response has been read
@@ -553,7 +625,7 @@ public class TestRequest extends TomcatBaseTest {
 
     private HttpURLConnection getConnection(String query) throws IOException {
         URL postURL;
-        postURL = URI.create(query).toURL();
+        postURL = new URL(query);
         HttpURLConnection conn = (HttpURLConnection) postURL.openConnection();
         conn.setRequestMethod("POST");
 
@@ -570,7 +642,8 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             req.setCharacterEncoding("UTF-8");
 
             if (req.getRequestURI().endsWith("parseParametersBeforeParseParts")) {
@@ -586,9 +659,11 @@ public class TestRequest extends TomcatBaseTest {
         }
     }
 
-    private void prepareMultiPartRequest(HttpURLConnection conn) throws Exception {
+    private void prepareRequestBug54984(HttpURLConnection conn)
+            throws Exception {
         String boundary = "-----" + System.currentTimeMillis();
-        conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
+        conn.setRequestProperty("Content-Type",
+                "multipart/form-data; boundary=" + boundary);
 
         try (OutputStreamWriter osw = new OutputStreamWriter(conn.getOutputStream(), "UTF-8");
                 PrintWriter writer = new PrintWriter(osw, true)) {
@@ -606,7 +681,8 @@ public class TestRequest extends TomcatBaseTest {
         }
     }
 
-    private void checkResponseBug54984(HttpURLConnection conn) throws Exception {
+    private void checkResponseBug54984(HttpURLConnection conn)
+            throws Exception {
         List<String> response = new ArrayList<>();
         int status = conn.getResponseCode();
         if (status == HttpURLConnection.HTTP_OK) {
@@ -616,10 +692,10 @@ public class TestRequest extends TomcatBaseTest {
                 while ((line = reader.readLine()) != null) {
                     response.add(line);
                 }
-                Assert.assertTrue(response.contains("Part äö"));
+                assertTrue(response.contains("Part äö"));
             }
         } else {
-            Assert.fail("OK status was expected: " + status);
+            fail("OK status was expected: " + status);
         }
     }
 
@@ -670,17 +746,17 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501j() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc", "/pa_th/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc", "/pa%5Fth/abc");
     }
 
     @Test
     public void testBug56501k() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc/", "/pa_th/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc/", "/pa%5Fth/abc");
     }
 
     @Test
     public void testBug56501l() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc/xxx", "/pa_th/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc/xxx", "/pa%5Fth/abc");
     }
 
     @Test
@@ -700,12 +776,12 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501p() throws Exception {
-        doBug56501("/path/abc", "/path;a=b/abc/xxx", "/path/abc");
+        doBug56501("/path/abc", "/path;a=b/abc/xxx", "/path;a=b/abc");
     }
 
     @Test
     public void testBug56501q() throws Exception {
-        doBug56501("/path/abc", "/path/abc;a=b/xxx", "/path/abc");
+        doBug56501("/path/abc", "/path/abc;a=b/xxx", "/path/abc;a=b");
     }
 
     @Test
@@ -715,55 +791,47 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501s() throws Exception {
-        doBug56501("/path/abc", "/.;a=b/path/abc/xxx", "/path/abc");
+        doBug56501("/path/abc", "/.;a=b/path/abc/xxx", "/.;a=b/path/abc");
     }
 
     @Test
     public void testBug57215a() throws Exception {
-        doBug56501("/path", "//path", "/path");
+        doBug56501("/path", "//path", "//path");
     }
 
     @Test
     public void testBug57215b() throws Exception {
-        doBug56501("/path", "//path/", "/path");
+        doBug56501("/path", "//path/", "//path");
     }
 
     @Test
     public void testBug57215c() throws Exception {
-        doBug56501("/path", "/%2Fpath", "/path", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/%2Fpath", "/%2Fpath");
     }
 
     @Test
     public void testBug57215d() throws Exception {
-        doBug56501("/path", "/%2Fpath%2F", "/path", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/%2Fpath%2F", "/%2Fpath");
     }
 
     @Test
     public void testBug57215e() throws Exception {
-        doBug56501("/path", "/foo/../path", "/path");
+        doBug56501("/path", "/foo/../path", "/foo/../path");
     }
 
     @Test
     public void testBug57215f() throws Exception {
-        doBug56501("/path", "/foo/..%2fpath", "/path", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/foo/..%2fpath", "/foo/..%2fpath");
     }
 
-    private void doBug56501(String deployPath, String requestPath, String expected) throws Exception {
-        doBug56501(deployPath, requestPath, expected, EncodedSolidusHandling.REJECT);
-    }
-
-
-    private void doBug56501(String deployPath, String requestPath, String expected,
-            EncodedSolidusHandling encodedSolidusHandling) throws Exception {
+    private void doBug56501(String deployPath, String requestPath, String expected)
+            throws Exception {
 
         // Setup Tomcat instance
         Tomcat tomcat = getTomcatInstance();
 
-        tomcat.getConnector().setEncodedSolidusHandling(encodedSolidusHandling.getValue());
-
         // No file system docBase required
         Context ctx = tomcat.addContext(deployPath, null);
-        ctx.setAllowMultipleLeadingForwardSlashInPath(true);
 
         Tomcat.addServlet(ctx, "servlet", new Bug56501Servlet());
         ctx.addServletMappingDecoded("/*", "servlet");
@@ -775,15 +843,16 @@ public class TestRequest extends TomcatBaseTest {
         if (resultPath == null) {
             resultPath = "";
         }
-        Assert.assertEquals(expected, resultPath);
+        assertEquals(expected, resultPath);
     }
 
-    private static class Bug56501Servlet extends HttpServlet {
+    private class Bug56501Servlet extends HttpServlet {
 
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             resp.setContentType("text/plain");
             resp.getWriter().print(req.getContextPath());
         }
@@ -803,7 +872,8 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Reverse header order of getLocaleMultipleHeaders01() and make sure the result is the same.
+     * Reverse header order of getLocaleMultipleHeaders01() and make sure the
+     * result is the same.
      */
     @Test
     public void getLocaleMultipleHeaders02() throws Exception {
@@ -820,205 +890,84 @@ public class TestRequest extends TomcatBaseTest {
 
 
     @Test
+    @Ignore("Used to check performance of different parsing approaches")
+    public void localeParsePerformance() throws Exception {
+        TesterRequest req = new TesterRequest();
+        req.addHeader("accept-encoding", "en-gb,en");
+
+        long start = System.nanoTime();
+
+        // Takes about 0.3s on a quad core 2.7Ghz 2013 MacBook
+        for (int i = 0; i < 10000000; i++) {
+            req.parseLocales();
+            req.localesParsed = false;
+            req.locales.clear();
+        }
+
+        long time = System.nanoTime() - start;
+
+        System.out.println(time);
+    }
+
+
+    @Test
     public void testGetReaderValidEncoding() throws Exception {
         doTestGetReader("ISO-8859-1", true);
     }
 
 
     @Test
-    public void testGetReaderInvalidEncoding() throws Exception {
+    public void testGetReaderInvalidEbcoding() throws Exception {
         doTestGetReader("X-Invalid", false);
     }
 
 
-    private void doTestGetReader(String userAgentCharacterEncoding, boolean expect200) throws Exception {
+    private void doTestGetReader(String userAgentCharaceterEncoding, boolean expect200)
+            throws Exception {
 
         // Setup Tomcat instance
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = getProgrammaticRootContext();
+        Context ctx = tomcat.addContext("", null);
 
         Tomcat.addServlet(ctx, "servlet", new Bug61264GetReaderServlet());
         ctx.addServletMappingDecoded("/", "servlet");
 
         tomcat.start();
 
-        Charset charset = StandardCharsets.ISO_8859_1;
-        try {
-            charset = Charset.forName(userAgentCharacterEncoding);
-        } catch (UnsupportedCharsetException e) {
-            // Ignore - use default set above
-        }
-        byte[] body = "Test".getBytes(charset);
+        byte[] body = "Test".getBytes();
         ByteChunk bc = new ByteChunk();
         Map<String,List<String>> reqHeaders = new HashMap<>();
         reqHeaders.put("Content-Type",
-                Arrays.asList(new String[] { "text/plain;charset=" + userAgentCharacterEncoding }));
+                Arrays.asList(new String[] {"text/plain;charset=" + userAgentCharaceterEncoding}));
 
         int rc = postUrl(body, "http://localhost:" + getPort() + "/", bc, reqHeaders, null);
 
         if (expect200) {
-            Assert.assertEquals(200, rc);
+            assertEquals(200, rc);
         } else {
-            Assert.assertEquals(500, rc);
+            assertEquals(500, rc);
         }
     }
 
 
-    private static class Bug61264GetReaderServlet extends HttpServlet {
+    private class Bug61264GetReaderServlet extends HttpServlet {
 
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             // This is intended for POST requests
             resp.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
         }
 
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+                throws ServletException, IOException {
             // Container will handle any errors
             req.getReader();
-        }
-    }
-
-
-    /*
-     * https://bz.apache.org/bugzilla/show_bug.cgi?id=69442
-     */
-    @Test
-    public void testTestParameterMediaTypeLowerCase() throws Exception {
-        // toLowerCase() is unnecessary but keep it in case the constant is changed in the future
-        doTestParameterMediaTypeCase(Globals.CONTENT_TYPE_FORM_URL_ENCODING.toLowerCase(Locale.ENGLISH));
-    }
-
-
-    /*
-     * https://bz.apache.org/bugzilla/show_bug.cgi?id=69442
-     */
-    @Test
-    public void testTestParameterMediaTypeUpperCase() throws Exception {
-        doTestParameterMediaTypeCase(Globals.CONTENT_TYPE_FORM_URL_ENCODING.toUpperCase(Locale.ENGLISH));
-    }
-
-
-    private void doTestParameterMediaTypeCase(String contentType) throws Exception {
-        // Setup Tomcat instance
-        Tomcat tomcat = getTomcatInstance();
-
-        // No file system docBase required
-        Context ctx = getProgrammaticRootContext();
-
-        Tomcat.addServlet(ctx, "servlet", new Bug69442Servlet());
-        ctx.addServletMappingDecoded("/", "servlet");
-
-        tomcat.start();
-
-        ByteChunk bc = new ByteChunk();
-        Map<String,List<String>> reqHeaders = new HashMap<>();
-        reqHeaders.put("Content-Type", Arrays.asList(contentType));
-        postUrl("a=b&c=d".getBytes(), "http://localhost:" + getPort() + "/", bc, reqHeaders, null);
-        String responseBody = bc.toString();
-        Assert.assertTrue(responseBody, responseBody.contains("a=b"));
-        Assert.assertTrue(responseBody, responseBody.contains("c=d"));
-    }
-
-
-    private static class Bug69442Servlet extends HttpServlet {
-
-        private static final long serialVersionUID = 1L;
-
-        @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-            resp.setContentType("text/plain");
-            resp.setCharacterEncoding(StandardCharsets.UTF_8);
-            PrintWriter pw = resp.getWriter();
-            Enumeration<String> names = req.getParameterNames();
-            while (names.hasMoreElements()) {
-                String name = names.nextElement();
-                String[] values = req.getParameterValues(name);
-                pw.println(name + "=" + StringUtils.join(values));
-            }
-        }
-    }
-
-
-    /*
-     * getParameter should work with a multipart/form-data request if there is no multipart config.
-     */
-    @Test
-    public void testBug69690a() throws Exception {
-        Tomcat tomcat = getTomcatInstance();
-        Context ctx = getProgrammaticRootContext();
-        Tomcat.addServlet(ctx, "Bug69690", new Bug69690Servlet());
-        ctx.addServletMappingDecoded("/", "Bug69690");
-        tomcat.start();
-
-        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/parameter?a=b");
-
-        prepareMultiPartRequest(conn);
-
-        List<String> response = new ArrayList<>();
-        int status = conn.getResponseCode();
-        if (status == HttpURLConnection.HTTP_OK) {
-            try (InputStreamReader isr = new InputStreamReader(conn.getInputStream(), "UTF-8");
-                    BufferedReader reader = new BufferedReader(isr)) {
-                String line = null;
-                while ((line = reader.readLine()) != null) {
-                    response.add(line);
-                }
-                Assert.assertTrue(response.contains("OK"));
-            }
-        } else {
-            Assert.fail("OK status was expected: " + status);
-        }
-
-        conn.disconnect();
-    }
-
-
-    /*
-     * getPart should not work with a multipart/form-data request if there is no multipart config.
-     */
-    @Test
-    public void testBug69690b() throws Exception {
-        Tomcat tomcat = getTomcatInstance();
-        Context ctx = getProgrammaticRootContext();
-        Tomcat.addServlet(ctx, "Bug69690", new Bug69690Servlet());
-        ctx.addServletMappingDecoded("/", "Bug69690");
-        tomcat.start();
-
-        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/part?a=b");
-
-        prepareMultiPartRequest(conn);
-
-        Assert.assertEquals(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, conn.getResponseCode());
-
-        conn.disconnect();
-    }
-
-
-    private class Bug69690Servlet extends HttpServlet {
-
-        private static final long serialVersionUID = 1L;
-
-        @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-            resp.setCharacterEncoding(StandardCharsets.UTF_8);
-            resp.setContentType("text/plain");
-            PrintWriter pw = resp.getWriter();
-
-            if (req.getRequestURI().endsWith("/parameter")) {
-                if ("b".equals(req.getParameter("a"))) {
-                    pw.print("OK");
-                } else {
-                    pw.print("FAIL - Parameter 'a' not set to 'b'");
-                }
-            } else {
-                // This should trigger an error since the servlet does not have a multi-part configuration.
-                req.getPart("any");
-            }
         }
     }
 }
