@@ -17,7 +17,6 @@
 package org.apache.catalina.startup;
 
 import java.io.IOException;
-import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collection;
@@ -25,27 +24,21 @@ import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 
-import jakarta.servlet.ServletContainerInitializer;
-import jakarta.servlet.ServletContext;
-
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.IsInstanceOf.instanceOf;
+import javax.servlet.ServletContainerInitializer;
+import javax.servlet.ServletContext;
 
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
 import org.apache.catalina.Context;
-import org.apache.catalina.LifecycleException;
-import org.apache.catalina.WebResourceRoot;
-import org.apache.catalina.webresources.StandardRoot;
 import org.apache.tomcat.unittest.TesterContext;
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
 
 public class TestWebappServiceLoader {
     private static final String CONFIG_FILE =
-            "META-INF/services/jakarta.servlet.ServletContainerInitializer";
+            "META-INF/services/javax.servlet.ServletContainerInitializer";
     private IMocksControl control;
     private ClassLoader cl;
     private ClassLoader parent;
@@ -69,8 +62,6 @@ public class TestWebappServiceLoader {
     @Test
     public void testNoInitializersFound() throws IOException {
         loader = new WebappServiceLoader<>(context);
-        EasyMock.expect(cl.getResources(CONFIG_FILE))
-                .andReturn(Collections.<URL>emptyEnumeration());
         EasyMock.expect(servletContext.getAttribute(ServletContext.ORDERED_LIBS))
                 .andReturn(null);
         EasyMock.expect(cl.getResources(CONFIG_FILE))
@@ -83,17 +74,15 @@ public class TestWebappServiceLoader {
     @Test
     @SuppressWarnings("unchecked")
     public void testInitializerFromClasspath() throws IOException {
-        URL url = URI.create("file://test").toURL();
+        URL url = new URL("file://test");
         loader = EasyMock.createMockBuilder(WebappServiceLoader.class)
                 .addMockedMethod("parseConfigFile", LinkedHashSet.class, URL.class)
                 .withConstructor(context).createMock(control);
-        EasyMock.expect(cl.getResources(CONFIG_FILE))
-                .andReturn(Collections.enumeration(Collections.singleton(url)));
-        loader.parseConfigFile(EasyMock.isA(LinkedHashSet.class), EasyMock.same(url));
         EasyMock.expect(servletContext.getAttribute(ServletContext.ORDERED_LIBS))
                 .andReturn(null);
         EasyMock.expect(cl.getResources(CONFIG_FILE))
                 .andReturn(Collections.enumeration(Collections.singleton(url)));
+        loader.parseConfigFile(EasyMock.isA(LinkedHashSet.class), EasyMock.same(url));
         control.replay();
         Assert.assertTrue(loader.load(ServletContainerInitializer.class).isEmpty());
         control.verify();
@@ -102,26 +91,24 @@ public class TestWebappServiceLoader {
     @Test
     @SuppressWarnings("unchecked")
     public void testWithOrdering() throws IOException {
-        URL url1 = URI.create("file://jar1.jar").toURL();
-        URL sci1 = URI.create("jar:file://jar1.jar!/" + CONFIG_FILE).toURL();
-        URL url2 = URI.create("file://dir/").toURL();
-        URL sci2 = URI.create("file://dir/" + CONFIG_FILE).toURL();
+        URL url1 = new URL("file://jar1.jar");
+        URL sci1 = new URL("jar:file://jar1.jar!/" + CONFIG_FILE);
+        URL url2 = new URL("file://dir/");
+        URL sci2 = new URL("file://dir/" + CONFIG_FILE);
         loader = EasyMock.createMockBuilder(WebappServiceLoader.class)
                 .addMockedMethod("parseConfigFile", LinkedHashSet.class, URL.class)
                 .withConstructor(context).createMock(control);
         List<String> jars = Arrays.asList("jar1.jar", "dir/");
-        EasyMock.expect(parent.getResources(CONFIG_FILE))
-                .andReturn(Collections.<URL>emptyEnumeration());
         EasyMock.expect(servletContext.getAttribute(ServletContext.ORDERED_LIBS))
                 .andReturn(jars);
-        EasyMock.expect(servletContext.getResource("/WEB-INF/classes/" + CONFIG_FILE))
-                .andReturn(null);
         EasyMock.expect(servletContext.getResource("/WEB-INF/lib/jar1.jar"))
                 .andReturn(url1);
         loader.parseConfigFile(EasyMock.isA(LinkedHashSet.class), EasyMock.eq(sci1));
         EasyMock.expect(servletContext.getResource("/WEB-INF/lib/dir/"))
                 .andReturn(url2);
         loader.parseConfigFile(EasyMock.isA(LinkedHashSet.class), EasyMock.eq(sci2));
+        EasyMock.expect(parent.getResources(CONFIG_FILE))
+                .andReturn(Collections.<URL>emptyEnumeration());
 
         control.replay();
         Assert.assertTrue(loader.load(ServletContainerInitializer.class).isEmpty());
@@ -165,8 +152,8 @@ public class TestWebappServiceLoader {
         control.replay();
         try {
             loader.loadServices(ServletContainerInitializer.class, names);
-        } catch (IOException ioe) {
-            assertThat(ioe.getCause(), instanceOf(ClassCastException.class));
+        } catch (IOException e) {
+            Assert.assertTrue(e.getCause() instanceof ClassCastException);
         } finally {
             control.verify();
         }
@@ -184,8 +171,8 @@ public class TestWebappServiceLoader {
         control.replay();
         try {
             loader.loadServices(ServletContainerInitializer.class, names);
-        } catch (IOException ioe) {
-            assertThat(ioe.getCause(), instanceOf(ReflectiveOperationException.class));
+        } catch (IOException e) {
+            Assert.assertTrue(e.getCause() instanceof InstantiationException);
         } finally {
             control.verify();
         }
@@ -194,19 +181,10 @@ public class TestWebappServiceLoader {
     private static class ExtendedTesterContext extends TesterContext {
         private final ServletContext servletContext;
         private final ClassLoader parent;
-        private final WebResourceRoot resources;
 
-        ExtendedTesterContext(ServletContext servletContext, ClassLoader parent) {
+        public ExtendedTesterContext(ServletContext servletContext, ClassLoader parent) {
             this.servletContext = servletContext;
             this.parent = parent;
-            // Empty resources - any non-null returns will be mocked on the
-            // ServletContext
-            this.resources = new StandardRoot(this);
-            try {
-                this.resources.start();
-            } catch (LifecycleException e) {
-                throw new IllegalStateException(e);
-            }
         }
 
         @Override
@@ -224,9 +202,5 @@ public class TestWebappServiceLoader {
             return parent;
         }
 
-        @Override
-        public WebResourceRoot getResources() {
-            return resources;
-        }
     }
 }
