@@ -18,8 +18,6 @@ package org.apache.jasper.servlet;
 
 import java.io.File;
 import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.List;
@@ -31,7 +29,6 @@ import org.junit.Test;
 import org.apache.catalina.Context;
 import org.apache.catalina.startup.Tomcat;
 import org.apache.catalina.startup.TomcatBaseTest;
-import org.apache.juli.logging.LogFactory;
 import org.apache.tomcat.Jar;
 import org.apache.tomcat.util.buf.ByteChunk;
 import org.apache.tomcat.util.scan.JarFactory;
@@ -85,8 +82,7 @@ public class TestTldScanner extends TomcatBaseTest {
 
 
         // Check content type
-        String contentType = getSingleHeader("Content-Type", headers);
-        Assert.assertTrue(contentType.startsWith("text/html"));
+        Assert.assertTrue(headers.get("Content-Type").get(0).startsWith("text/html"));
     }
 
 
@@ -98,9 +94,6 @@ public class TestTldScanner extends TomcatBaseTest {
     @Test
     public void testBug57647() throws Exception {
         TldScanner scanner = EasyMock.createMock(TldScanner.class);
-        Field f = TldScanner.class.getDeclaredField("log");
-        f.setAccessible(true);
-        f.set(scanner, LogFactory.getLog(TldScanner.class));
         Constructor<TldScanner.TldScannerCallback> constructor =
                 TldScanner.TldScannerCallback.class.getDeclaredConstructor(TldScanner.class);
         constructor.setAccessible(true);
@@ -108,16 +101,16 @@ public class TestTldScanner extends TomcatBaseTest {
 
         File webappDir = new File("webapps/examples");
         Assert.assertFalse(callback.scanFoundNoTLDs());
-        scan(callback, webappDir, "WEB-INF/lib/taglibs-standard-spec-1.2.5-migrated-0.0.1.jar");
+        scan(callback, webappDir, "WEB-INF/lib/taglibs-standard-spec-1.2.5.jar");
         Assert.assertTrue(callback.scanFoundNoTLDs());
-        scan(callback, webappDir, "WEB-INF/lib/taglibs-standard-impl-1.2.5-migrated-0.0.1.jar");
+        scan(callback, webappDir, "WEB-INF/lib/taglibs-standard-impl-1.2.5.jar");
         Assert.assertTrue(callback.scanFoundNoTLDs());
     }
 
     private static void scan(TldScanner.TldScannerCallback callback, File webapp, String path)
             throws Exception {
         String fullPath = new File(webapp, path).toURI().toString();
-        URL jarUrl = URI.create("jar:" + fullPath + "!/").toURL();
+        URL jarUrl = new URL("jar:" + fullPath + "!/");
         try (Jar jar = JarFactory.newInstance(jarUrl)) {
             callback.scan(jar, path, true);
         }
